fixed navbar alignment

--- a/designgraphique.css
+++ b/designgraphique.css
@@ -552,25 +552,7 @@ img {
         }
     }
 
-    .nav-links {
-        position: fixed;
-        right: 0;
-        top: 0;
-        height: 100vh;
-        background-color: white;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 70%;
-        transform: translateX(100%);
-        transition: transform 0.5s ease-in;
-        z-index: 999;
-        padding-top: 60px;
-
-        li {
-            margin: 1rem 0;
-        }
-    }
+  
 
     .nav-active {
         transform: translateX(0%);
